--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -2,7 +2,7 @@
 nav {
   transition: all ease-in-out 1s;
   padding: 10px 20px;
-  width: 100%;
+  width: 100vw;
   height: 56px;
   position: fixed;
   top: 0;
