--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -7,9 +7,13 @@
   font-size: 16px;
 }
 main {
+  margin: 0;
+  padding: 0;
   background-color: $VeertienWhite;
 }
 body {
+  margin: 0;
+  padding: 0;
   font-size: 1rem;
   display: flex; 
   flex-direction: column; 
