--- a/css/main.css
+++ b/css/main.css
@@ -588,8 +588,8 @@ i {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
   background: #F8FAFA;
   display: flex;
   justify-content: center;
