--- a/scss/_section0.scss
+++ b/scss/_section0.scss
@@ -1,4 +1,4 @@
-.section0{
+.section_container{
     margin: 2rem;
     padding-bottom: 2rem;
     border-radius: 1rem;
@@ -7,7 +7,6 @@
 }
 .manos{
   border-radius: 14px;
-  width: inherit;
   width: 90vw;
   height: 400px;
   object-fit: cover;
