--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -7,9 +7,14 @@
   font-size: 16px;
 }
 main {
+  overflow-x: hidden;
   background-color: $VeertienWhite;
 }
 body {
+  &.panel-open {
+    left: -250px;
+   }
+  position: relative;
   font-size: 1rem;
   display: flex; 
   flex-direction: column; 
