--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -2,13 +2,14 @@
 nav {
   transition: all ease-in-out 1s;
   padding: 10px 20px;
-  width: 100vw;
+  width: 100%;
   height: 56px;
   position: fixed;
   top: 0;
   left: 0;
   display: flex;
-  align-items: center;
+  flex-direction: row;
+  justify-content: space-between;
   z-index: 10; 
 }
   .logo_nav {
