--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -1,9 +1,12 @@
 .img_carousel{
   object-fit: cover;
+  width: 100%;
   height: 100vh;
-  width: 100vw;
 }
-
+.full-screen {
+  height: 100vh; /* altura igual a la altura de la pantalla */
+  width: 100%; /* ancho igual al ancho de la pantalla */
+}
 .title_section1 {
   //text-align: center;
   font-size: 2.4rem;
