--- a/css/main.css
+++ b/css/main.css
@@ -106,7 +106,7 @@ a:active {
 nav {
   transition: all ease-in-out 1s;
   padding: 10px 20px;
-  width: 100%;
+  width: 100vw;
   height: 56px;
   position: fixed;
   top: 0;
@@ -137,12 +137,14 @@ nav {
 }
 
 .img_carousel {
+  z-index: 0;
   object-fit: cover;
   width: 100%;
   height: 100vh;
 }
 
 .full-screen {
+  z-index: 0;
   height: 100vh; /* altura igual a la altura de la pantalla */
   width: 100%; /* ancho igual al ancho de la pantalla */
 }
@@ -877,8 +879,15 @@ i {
   }
 }
 .menu-toggle {
+  scale: 1.3;
+  right: 0;
+  top: 0;
+  z-index: 99;
+  margin: 0.5rem 1rem;
+  width: 40px;
+  height: 40px;
   cursor: pointer;
-  position: relative;
+  position: absolute;
 }
 
 .hamburger, .cross {
