--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,7 +1,13 @@
 .menu-toggle{
-
+  scale: 1.3;
+  right: 0;
+  top: 0;
+  z-index: 99;
+  margin: .5rem 1rem;
+	width:40px;
+	height:40px;
 	cursor:pointer;
-	position:relative;
+	position:absolute;
 }
 .hamburger,.cross{
 	position:absolute;
