--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -1,9 +1,11 @@
 .img_carousel{
+  z-index: 0;
   object-fit: cover;
   width: 100%;
   height: 100vh;
 }
 .full-screen {
+  z-index: 0;
   height: 100vh; /* altura igual a la altura de la pantalla */
   width: 100%; /* ancho igual al ancho de la pantalla */
 }
