--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -74,72 +74,10 @@
 .menu-toggle.active .cross span:last-child{
 	transform:translateY(-50%) rotate(-45deg) scaleX(1);
 }
-<<<<<<< HEAD
+
 body {
   overflow-x: hidden;
 }
-
-// header {
-//   position: fixed;
-//   top: 0;
-//   right: -200px;
-//   width: 200px;
-//   height: 100%;
-//   background-color: #333;
-//   transition: all 0.3s ease-in-out;
-// }
-
-// .menu-toggle {
-//   position: absolute;
-//   top: 10px;
-//   right: 10px;
-//   width: 30px;
-//   height: 20px;
-//   cursor: pointer;
-//   z-index: 1;
-// }
-
-// .hamburger {
-//   position: fixed;
-//   width: 100%;
-//   height: 2px;
-//   background-color: #fff;
-//   border-radius: 2px;
-//   transition: all 0.3s ease-in-out;
-// }
-
-// .hamburger:before, .hamburger:after {
-//   content: "";
-//   position: absolute;
-//   width: 100%;
-//   height: 2px;
-//   background-color: #fff;
-//   border-radius: 2px;
-//   transition: all 0.3s ease-in-out;
-// }
-
-// .hamburger:before {
-//   top: -8px;
-// }
-
-// .hamburger:after {
-//   bottom: -8px;
-// }
-
-// .menu-toggle.active .hamburger {
-//   background-color: transparent;
-// }
-
-// .menu-toggle.active .hamburger:before {
-//   transform: rotate(45deg);
-//   top: 0;
-// }
-
-// .menu-toggle.active .hamburger:after {
-//   transform: rotate(-45deg);
-//   bottom: 0;
-// }
-
 .menu-title {
   color: #fff;
   font-size: 1.5em;
@@ -176,148 +114,48 @@ body {
   right: 0;
   z-index: 9;
   background: $VeertienBlack;
-  width: 200px;
+  width: 250px;
   height: 100%;
-  transform: translateX(200px);
+  transform: translateX(250px);
   transition: transform 0.3s ease-in-out;
+  /* Añadimos la propiedad position */
 }
 
 .menu.active {
   transform: translateX(0);
 }
 
-.title_menu{
+.content_menu {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  margin: 2rem 2rem;
   color: $VeertienWhite;
-  font-size: 1.4rem;
-  font-weight: 700;
-  margin: 2rem 1rem;
 }
 
-.ul_menu{
+.title_menu {
+  font-size: 1.4rem;
+  font-weight: 700;
+}
+
+.ul_menu {
   
 }
 
-.li_menu{
+.li_menu {
   text-decoration: none;
   list-style: none;
   font-size: 1rem;
-  a{
+  a {
+    font-weight: 500;
     text-decoration: none;
     color: $VeertienWhite;
   }
 }
-=======
 
-.hidden-panel {
-  background: #333;
-  color: #666;
-  font-size: 0.875rem;
-  height: 100%;
+.copy_menu {
   position: absolute;
-  right: -250px;
-  top: 0;
-  width: 250px;
-  a {
-    
-    color: #999;
-    transition: color 0.3s ease-out;
-    &:hover {
-      color: #fff;
-    }
-  }
-}
-
-.hidden-panel-close {
-  color: #666;
-  cursor: pointer;
-  position: absolute;
-  right: 20px;
-  top: 3.7em;
-  transition: color 0.3s ease-in-out;
-  &:hover {
-    color: #fff;
-  }
-}
-
-.hidden-panel-content {
-  padding: 3.65em 10%;
-}
-
-.hidden-panel-nav {
-  position: static;
-  border-bottom: 1px solid #666;
-  border-bottom: 1px solid rgba(#666, 0.25);
-  margin-bottom: 1.5em;
-  padding-bottom: 1.5em;
-  text-transform: uppercase;
-  h3 {
-    letter-spacing: 1px;
-    margin-bottom: 1em;
-  }
-  ul {
-    list-style: none;
-    font-weight: 600;
-    margin: 0;
-    padding: 0;
-  }
-  li {
-    padding: 0.25em 0;
-  }
-}
-.hidden-panel-text {
-  line-height: 1.5;
-  p {
-    margin-bottom: 1.5em;
-    &:last-child {
-      margin-bottom: 0;
-    }
-  }
-}
-
-.hidden-panel-credits {
-  font-size: 0.75rem;
-  line-height: 1.5;
-  span {
-    display: block;
-    margin-bottom: 0.15em;
-  }
-}
-
-.banner {
-  background: #f5756c;
-  background: linear-gradient(#f5756c, #fd5480), #f5756c;
-  box-sizing: border-box;
-  height: 100%;
+  bottom: 0;
   left: 0;
-  padding: 5em 0;
-  position: absolute;
-  text-align: center;
-  top: 0;
-  width: 100%;
-  z-index: 1;
-  h1 {
-    color: #fff;
-    font-family: "Dancing Script", cursive;
-    font-size: 4.375rem;
-    margin-bottom: 1em;
-  }
-  h2 {
-    color: #fff;
-    font-size: 2rem;
-    font-weight: 300;
-    line-height: 1.5;
-    margin: 0 auto;
-    width: 50%;
-  }
+  margin: 2rem 2rem;
 }
-
-.cf:before,
-.cf:after {
-  content: "";
-  display: table;
-}
-
-.cf:after {
-  clear: both;
-}
->>>>>>> 45b1dff9426fc7042281b053da29cf43f3f8034d
