--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -1,7 +1,7 @@
 .img_carousel{
   object-fit: cover;
   width: 100%;
-  height: 100%;
+  height: 95vh;
 }
 .full-screen {
   height: 100%; /* altura igual a la altura de la pantalla */
