--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -3,7 +3,7 @@ i {
 }
 .footer {
   padding-block: 5rem;
-  background-color: $VeertienBlue;
+  background-color: $VeertienBlack;
   color: $VeertienWhite;
 }
 .footer__container {
