--- a/css/main.css
+++ b/css/main.css
@@ -31,6 +31,13 @@ section {
   align-items: center;
 }
 
+article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -42,17 +49,17 @@ a:active {
 }
 
 .title {
-  text-align: center;
-  font-size: 3rem;
-  margin: 2rem;
+  text-align: left;
+  font-size: 2.4rem;
+  margin: 2rem 1rem;
   color: #0A0D13;
 }
 
 .copy {
   font-size: 1rem;
-  text-align: center;
+  text-align: left;
   text-justify: auto;
-  padding: 0 3vh;
+  padding: 0 1rem;
   padding-bottom: 3vh;
 }
 
@@ -90,13 +97,14 @@ a:active {
 .title_button {
   margin: 1rem;
   font-size: 1.4rem;
-  color: #0A0D13;
+  font-weight: 400;
+  color: #00B0B9;
   text-decoration: none;
   transition: 0.5s;
 }
 
 .title_button:hover {
-  color: #00B0B9;
+  color: #0A0D13;
 }
 
 .carousel-control-next-icon .carousel-control-prev-icon {
@@ -157,18 +165,19 @@ nav {
 
 .caja__textos {
   position: relative;
-  margin-bottom: 2rem;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 0;
+  left: 0;
+  transform: translate(-50px, -20px);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
-  text-align: center;
+  justify-content: left;
+  text-align: left;
 }
 
 .title__active {
+  text-align: left;
   font-size: 2.4rem;
   font-weight: 700;
   transform-origin: center;
@@ -383,7 +392,7 @@ nav {
 }
 .blog-slider__item {
   display: flex;
-  align-items: center;
+  align-items: left;
 }
 @media screen and (max-width: 768px) {
   .blog-slider__item {
@@ -447,8 +456,8 @@ nav {
   width: 300px;
   flex-shrink: 0;
   height: 300px;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-  box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+  background-image: linear-gradient(147deg, #00B0B9 0%, #007980 74%);
+  box-shadow: 4px 13px 30px 1px rgba(0, 176, 185, 0.2);
   border-radius: 20px;
   transform: translateX(-80px);
   overflow: hidden;
@@ -460,7 +469,7 @@ nav {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+  background-image: linear-gradient(147deg, #00B0B9 0%, #007980 74%);
   border-radius: 20px;
   opacity: 0.8;
 }
@@ -528,12 +537,12 @@ nav {
 }
 .blog-slider__button {
   display: inline-flex;
-  background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+  background-image: linear-gradient(147deg, rgb(0, 176, 185) 0%, #007980 74%);
   padding: 15px 35px;
   margin: 2rem 0;
-  border-radius: 50px;
+  border-radius: 14px;
   color: #fff;
-  box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
+  box-shadow: 0px 14px 80px rgba(0, 176, 185, 0.2);
   text-decoration: none;
   font-weight: 500;
   justify-content: center;
@@ -591,9 +600,9 @@ nav {
 }
 .blog-slider__pagination .swiper-pagination-bullet-active {
   opacity: 1;
-  background: #fd3838;
+  background: #00B0B9;
   height: 30px;
-  box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
+  box-shadow: 0px 0px 20px rgba(0, 176, 185, 0.4);
 }
 @media screen and (max-width: 768px) {
   .blog-slider__pagination .swiper-pagination-bullet-active {
@@ -608,7 +617,7 @@ i {
 
 .footer {
   padding-block: 5rem;
-  background-color: #00B0B9;
+  background-color: #0A0D13;
   color: #F8FAFA;
 }
 
