--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -190,7 +190,7 @@
   
   &__item {
     display: flex;
-    align-items: center;
+    align-items: left;
     
   @media screen and (max-width: 768px) {
     flex-direction: column;
@@ -226,8 +226,8 @@
     width: 300px;
     flex-shrink: 0;
     height: 300px;
-    background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
-    box-shadow: 4px 13px 30px 1px rgba(252, 56, 56, 0.2);
+    background-image: linear-gradient(147deg, #00B0B9 0%, #007980 74%);
+    box-shadow: 4px 13px 30px 1px rgba(0, 176, 185, 0.2);
     border-radius: 20px;
     transform: translateX(-80px);
    
@@ -240,7 +240,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+    background-image: linear-gradient(147deg, #00B0B9 0%, #007980 74%);
       border-radius: 20px;
     opacity: 0.8;
 }
@@ -318,12 +318,12 @@
   
   &__button {
         display: inline-flex;
-    background-image: linear-gradient(147deg, #fe8a39 0%, #fd3838 74%);
+    background-image: linear-gradient(147deg, rgb(0, 176, 185) 0%, #007980 74%);
     padding: 15px 35px;
     margin: 2rem 0;
-    border-radius: 50px;
+    border-radius: 14px;
     color: #fff;
-    box-shadow: 0px 14px 80px rgba(252, 56, 56, 0.4);
+    box-shadow: 0px 14px 80px rgba(0, 176, 185, 0.2);
     text-decoration: none;
     font-weight: 500;
         justify-content: center;
@@ -376,9 +376,9 @@
       transition: all .3s;
       &-active {
     opacity: 1;
-    background: #fd3838;
+    background: #00B0B9;
     height: 30px;
-    box-shadow: 0px 0px 20px rgba(252, 56, 56, 0.3);
+    box-shadow: 0px 0px 20px rgba(0, 176, 185, 0.4);
         
         @media screen and (max-width: 768px) {
           height: 11px;
