--- a/scss/_commons.scss
+++ b/scss/_commons.scss
@@ -27,6 +27,12 @@ section{
   justify-content: center;
   align-items: center;
 }
+article{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 html{
   scroll-behavior: smooth;
 }
@@ -36,16 +42,16 @@ a:active {
   text-decoration: none;
 }
 .title {
-  text-align: center;
-  font-size: 3rem;
-  margin: 2rem;
+  text-align: left;
+  font-size: 2.4rem;
+  margin: 2rem 1rem;
   color: $VeertienBlack;
 }
 .copy {
   font-size: 1rem;
-  text-align:center;
+  text-align:left;
   text-justify: auto;
-  padding: 0 3vh;
+  padding: 0 1rem;
   padding-bottom: 3vh;
 }
 .title_invert{
@@ -79,14 +85,20 @@ a:active {
 .title_button{
   margin: 1rem;
   font-size: 1.4rem;
-  color: $VeertienBlack;
+  font-weight: 400;
+  color: $VeertienBlue;
   text-decoration: none;
   transition: .5s;
 }
 .title_button:hover{
-  color: $VeertienBlue;
+  color: $VeertienBlack;
 }
 
 .carousel-control-next-icon .carousel-control-prev-icon{
   display: none;
 }
+
+
+
+
+
