--- a/scss/_section1.scss
+++ b/scss/_section1.scss
@@ -18,19 +18,20 @@
 
 .caja__textos{
   position: relative;
-  margin-bottom: 2rem;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  margin: 0;
+  padding: 0;
+  left: 0;
+  transform: translate(-50px, -20px);
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
-  text-align: center;
+  justify-content: left;
+  text-align: left;
 }
 
 
 .title__active {
+  text-align: left;
   font-size: 2.4rem;
   font-weight: 700;
   transform-origin: center;
