--- a/wrapper.css
+++ b/wrapper.css
@@ -76,20 +76,10 @@ header
   z-index: -1;
 }
 
-footer
-{
-  width: 100%;
-  height: 300px;
-  background: gray;
-  bottom: -300px;
-  position: fixed;
-  z-index: -1;
-}
 
 .content
 {
-  height: 1000px;
-  min-height: 1000px;
+  height: fit-content;
   background: #ededed;
   position: relative;
   z-index: 1;
@@ -98,7 +88,6 @@ footer
 .wrapper-parallax {
   margin-top: 100%;
   margin-bottom: 300px;
-  box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.5);
 }
 
 h1{
@@ -108,7 +97,6 @@ h1{
   margin: 0;
   text-transform: uppercase;
   text-align: center;
-  font-family: Helvetica;
   font-size: 150px;
   color: #fff;
 }
@@ -140,4 +128,87 @@ footer,
   -webkit-transition-timing-function: cubic-bezier(0, 0, 0, 1);
      -moz-transition-timing-function: cubic-bezier(0, 0, 0, 1);
       transition-timing-function: cubic-bezier(0, 0, 0, 1);
+}
+
+.content {
+  background-color: transparent;
+  padding: 60px;
+  font-family: 'Nunito', sans-serif;
+  display: flex;
+  flex-direction: row;
+  flex-flow: row wrap;
+}
+
+.card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 300px;
+  -ms-flex: 300px;
+  flex: 300px;
+  min-width: 80vw;
+  margin: 20px;
+  border-radius: 10px;
+  border: 2px solid #c3c6ce;
+  cursor: pointer;
+  position: relative;
+  transition: 0.5s ease;
+}
+
+.card:hover {
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+  border-color: #008bf8;
+}
+
+.card--hover {
+  padding: 50px 0;
+  text-align: center;
+  opacity: 0.6;
+  transition: 0.25s ease;
+}
+
+.card--hover h3 {
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+  color: #008bf8;
+}
+
+.card--hover p {
+  margin: 10px 0 0;
+  font-size: 15px;
+  text-align: left;
+  margin: 10px 10px 0 20px;
+}
+
+.card--hover a {
+  border-radius: 20px;
+  background-color: #008bf8;
+  color: #fff;
+  padding: 8px 16px;
+  display: inline-block;
+  text-decoration: none;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%, 125%);
+  opacity: 0;
+  transition: 0.25s ease;
+}
+
+.card--hover:hover a {
+  box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.25);
+  transform: translate(-50%, 50%);
+  opacity: 1;
+}
+
+.card--dark {
+  background-color: #1a1a1a;
+  border-color: #1a1a1a;
+  color: #fff;
+}
+
+.card--dark a {
+  background-color: #7FEFBD;
+  color: #1a1a1a;
 }
