--- a/scss/_nav.scss
+++ b/scss/_nav.scss
@@ -1,7 +1,6 @@
 
 nav {
   transition: all ease-in-out 1s;
-  padding: 200px 20px;
   width: 100%;
   height: 56px;
   position: fixed;
@@ -14,5 +13,5 @@ nav {
 }
   .logo_nav {
     height: auto; 
-    margin: auto
+    margin: 20px 0;
 }
