--- a/css/main.css
+++ b/css/main.css
@@ -113,7 +113,7 @@ a:active {
 
 nav {
   transition: all ease-in-out 1s;
-  padding: 10px 20px;
+  padding: 10px;
   width: 100%;
   height: 56px;
   position: fixed;
